# travelplanner-full

./: .env.example  .gitignore  Dockerfile_airflow  Dockerfile_web  README.md  docker-compose.yml  pyproject.toml
clustering_api/: Dockerfile_clustering_api  README.md  main.py  pyproject.toml  requirements.txt
datalake/: dpt.csv  ratings.csv  users.json
datalake/model/: NCFNet_emb100_hid20.pt  ratings_emb.csv  user_input.json  user_prediction.json
datalake/scraped/data/city/: Tripadvisor_attractions_06200.json  Tripadvisor_attractions_43000.json  Tripadvisor_attractions_58000.json  Tripadvisor_attractions_60200.json  Tripadvisor_attractions_85100.json
datalake/scraped/data/dpt/: attractions_01.json  attractions_02.json  attractions_03.json  attractions_04.json  attractions_05.json  attractions_06.json  attractions_07.json  attractions_08.json  attractions_09.json  attractions_10.json  attractions_11.json  attractions_13.json  attractions_14.json  attractions_15.json  attractions_16.json  (+72 more)
src/: __init__.py
src/core/: __init__.py
src/core/entity/: __init__.py  point_of_interest_entity.py  user_entity.py
src/core/repository/: __init__.py  database.py  point_of_interest_repository.py  user_point_of_interest_history_repository.py  user_repository.py
src/core/usecase/: __init__.py  point_of_interest_usecase.py  user_point_of_interest_history_usecase.py  user_usecase.py
src/entrypoint/: __init__.py
src/entrypoint/dags/: ETL_NeuralNetwork_training.py  NeuralNetwork_predition.py  __init__.py  create_fake_userDB.py  delete_databases.py  import_datatourism_to_db.py  import_user_to_db.py  scraping_tripadvisor_activities_dpt.py  scraping_tripadvisor_reviews.py
src/entrypoint/web/: main.py
src/interface/: __init__.py  import_user.py  importer.py  search.py  user.py  user_point_of_interest_history.py
(+25 files in other folders)
